# volitve.si

./: pyproject.toml  volitve.ipynb
data/: __init__.py  dz-2014.csv  dz-2018.csv
