[tool.poetry]
name = "volitve"
version = "0.1.0"
description = ""
authors = ["Andraz Vrhovec <andraz@koofr.net>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.5"
ipython = "^7.30.1"
geopandas = "^0.10.2"
matplotlib = "^3.5.1"
Cartopy = "0.19.0.post1"
ipykernel = "^6.6.0"
folium = "^0.12.1"
mapclassify = "^2.4.3"
pysal = {extras = ["pysal.contrib"], version = "^2.5.0"}
contextily = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
